@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.7.2
 ====================================
+- [#6256] Ensure Register respects passwordField and emailField properties
 - [#6288] Fix error message display in ChangePassword
 
 Login 1.7.1
